tests/error/typedefed_function_with_scope.c
// fail

int _start(){
    typedef int function(){}
}
